@@ -431,7 +431,7 @@ public class RecipeRefundService extends RecipeBaseService {
             recipeRefund.setPrice(list.get(0).getPrice());
             recipeRefund.setApplyNo(hisResult.getData());
             recipeReFundSave(recipe, recipeRefund);
-            if (new Integer(1).equals(checkStatus) && null != drugsEnterprise) {
+            if (1 == Integer.valueOf(checkStatus) && null != drugsEnterprise) {
                 enterpriseManager.pushEnterpriseRefundPhone(recipe, drugsEnterprise);
             }
             //记录操作日志
